--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,8 @@
 version: 1.0.{build}
 configuration: Debug
 platform: Any CPU
+before_build:
+- cmd: nuget restore ./Challenge.sln
 build:
   project: Source/Source.csproj
-  verbosity: minimal
+  verbosity: normal
