--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,11 @@ version: 1.0.{build}
 configuration: Debug
 platform: Any CPU
 before_build:
-- cmd: nuget restore ./Challenge.sln
+- cmd: >-
+    nuget restore ./Challenge.sln
+    
+    msbuild ./Challenge.sh
+    
 build:
   project: Source/Source.csproj
   verbosity: normal
