--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ before_build:
 - cmd: >-
     nuget restore ./Challenge.sln
     
-    msbuild ./Challenge.sh
+    msbuild ./Challenge.sln
     
 build:
   project: Source/Source.csproj
