--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,15 +1,13 @@
 version: 1.0.{build}
-configuration: Debug
-platform: Any CPU
-before_build:
-- cmd: >-
-    nuget restore ./Challenge.sln
-    
-    msbuild ./Challenge.sln
-    
-build:
-  project: Source/Source.csproj
-  verbosity: normal
+dotnet_csproj:
+  patch: true
+  file: '**\*.csproj'
+  version: '{version}'
+  package_version: '{version}'
+  assembly_version: '{version}'
+  file_version: '{version}'
+  informational_version: '{version}'
+  
 before_test:
 - cmd: >-
     dir
@@ -17,9 +15,3 @@ before_test:
     cd Source.Test
 
     dir
-test:
-  assemblies:
-    only:
-    - '**\*.Source.Test.dll'
-after_test:
-- cmd: xunit.console Source.Test.dll /appveyor
