--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ build:
   project: Source/Source.csproj
   verbosity: normal
 test_script:
-- cmd: >-
-    cd Source.Test
-    dotnet test
+- cmd: cd Source.Test
+- cmd: dotnet test
+    
     
